--- a/MSR/Monthly-Security-Report-Book_toc.jrxml
+++ b/MSR/Monthly-Security-Report-Book_toc.jrxml
@@ -53,7 +53,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="35" splitType="Stretch">
+		<band height="53" splitType="Stretch">
 			<property name="local_mesure_unitheight" value="pixel"/>
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
@@ -71,12 +71,10 @@
 		</band>
 	</title>
 	<detail>
-		<band height="48" splitType="Stretch">
-			<property name="local_mesure_unitheight" value="pixel"/>
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<printWhenExpression><![CDATA[$F{pageIndex} == 1]]></printWhenExpression>
+		<band height="50">
+			<printWhenExpression><![CDATA[$F{pageIndex}==0]]></printWhenExpression>
 			<staticText>
-				<reportElement style="TOC-Title-Table-Of-Content" x="0" y="20" width="455" height="22" forecolor="#0097DB" uuid="1a3c5d23-107c-431a-926c-6cdcceb4128d"/>
+				<reportElement style="TOC-Title-Table-Of-Content" x="0" y="4" width="455" height="22" forecolor="#0097DB" uuid="1a3c5d23-107c-431a-926c-6cdcceb4128d"/>
 				<text><![CDATA[Table of Contents]]></text>
 			</staticText>
 		</band>
